WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176164
Take into account removed caches in Caches::remove assertion
https://bugs.webkit.org/show_bug.cgi?id=176164
Summary
Take into account removed caches in Caches::remove assertion
youenn fablet
Reported
2017-08-31 09:34:53 PDT
Caches may be asked to remove an already removed cache. The assertion in Caches::remove should take that into account.
Attachments
Patch
(5.17 KB, patch)
2017-08-31 10:48 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-08-31 10:48:22 PDT
Created
attachment 319479
[details]
Patch
Build Bot
Comment 2
2017-08-31 10:50:53 PDT
Attachment 319479
[details]
did not pass style-queue: ERROR: Source/WebKit/NetworkProcess/cache/CacheStorageEngineCaches.cpp:131: More than one command on the same line [whitespace/newline] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2017-08-31 11:31:26 PDT
Comment on
attachment 319479
[details]
Patch Clearing flags on attachment: 319479 Committed
r221428
: <
http://trac.webkit.org/changeset/221428
>
WebKit Commit Bot
Comment 4
2017-08-31 11:31:27 PDT
All reviewed patches have been landed. Closing bug.
Matt Lewis
Comment 5
2017-09-01 15:39:24 PDT
The test added in this patch has consistently failed on windows testers since being added according to the flakiness dashboard. it has also failed on Sierra debug:
https://build.webkit.org/results/Apple%20Sierra%20Debug%20WK2%20(Tests)/r221490%20(2818)/results.html
Radar WebKit Bug Importer
Comment 6
2017-09-27 12:46:47 PDT
<
rdar://problem/34693934
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug