Take into account removed caches in Caches::remove assertion https://bugs.webkit.org/show_bug.cgi?id=176164

Patch by Youenn Fablet <youenn@apple.com> on 2017-08-31
Reviewed by Alex Christensen.

Source/WebKit:

* NetworkProcess/cache/CacheStorageEngineCaches.cpp:
(WebKit::CacheStorage::Caches::remove):

LayoutTests:

* http/wpt/cache-storage/cache-remove-twice-expected.txt: Added.
* http/wpt/cache-storage/cache-remove-twice.html: Added.
* http/wpt/cache-storage/resources/cache-remove-twice-iframe.html: Added.

Canonical link: https://commits.webkit.org/192830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221428 268f45cc-cd09-0410-ab3c-d52691b4dbfc